--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,12 +24,12 @@ body {
     font-size: 50px;
   }
 
-  span {
+  .caption {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width:13%;
-    font-size: 30px
+    width:50%;
+    font-size: 18px
   }
 
   a {
@@ -50,4 +50,13 @@ body {
 
   table {
     width: 50%;
+  }
+
+  a:hover { 
+    background-color: greenyellow;
+  }
+
+  .red {
+    color: red;
+    font-weight: bold;
   }
