--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,15 @@ body {
     font-size: 18px
   }
 
+  a:hover { 
+    background-color: greenyellow;
+  }
+
+  .red {
+    color: red;
+    font-weight: bold;
+  }
+
   a {
     color: white;
   }
@@ -50,13 +59,4 @@ body {
 
   table {
     width: 50%;
-  }
-
-  a:hover { 
-    background-color: greenyellow;
-  }
-
-  .red {
-    color: red;
-    font: bold;
   }
