--- a/project1/casino.css
+++ b/project1/casino.css
@@ -66,32 +66,32 @@ body {
     width: 150px;
     height: 90px;
     perspective: 1000px;
-  }
+}
   
-  .flip-card-inner {
+.flip-card-inner {
     position: relative;
     width: 150px;
     height: 90px;
     transition: transform 0.8s;
     transform-style: preserve-3d;
-  }
+}
   
-  .flip-card1:hover .flip-card-inner {
+.flip-card1:hover .flip-card-inner {
     transform: rotateY(180deg);
-  }
+}
 
-  .flip-card-front, .flip-card-back {
+.flip-card-front, .flip-card-back {
     position: absolute;
     width: 150px;
     height: 90px;
     backface-visibility: hidden;
-  }
+}
   
-  .flip-card-back {
+.flip-card-back {
     transform: rotateY(180deg);
-  }
+}
 
-   .flip-card2 {
+.flip-card2 {
     margin: auto;
     position: fixed;
     bottom: 440px;
@@ -99,8 +99,48 @@ body {
     width: 150px;
     height: 90px;
     perspective: 1000px;
-  }
+}
 
-  .flip-card2:hover .flip-card-inner {
+.flip-card2:hover .flip-card-inner {
     transform: rotateY(180deg);
-  }
+}
+
+.casino {
+    margin: auto;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+}
+
+.casino img {
+    width: 100%;
+    margin: auto;
+}
+
+.cards {
+    margin: auto;
+    position: fixed;
+    right: 0px;
+    top: 0px;
+}
+
+.cards img {
+    width: 70%;
+    margin: auto;
+}
+
+.wood {
+    margin: auto;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+}
+
+.wood img {
+    width: 100%;
+    height: 10%;
+    margin: auto;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+}
