--- a/project1/casino.css
+++ b/project1/casino.css
@@ -39,7 +39,7 @@ body {
     animation-duration: 1s;
     position: fixed;
     bottom: 300;
-    right: 565;
+    left: 1200;
     opacity: 0;
     animation-fill-mode: forwards;
 }
@@ -47,7 +47,7 @@ body {
 @keyframes example {
     from {opacity: 0;}
     to {opacity: 1;}
-  }
+}
 
 .drawn:hover {
     animation-name: fade;
@@ -62,7 +62,7 @@ body {
     margin: auto;
     position: fixed;
     bottom: 440px;
-    right: 750px;
+    left: 750px;
     width: 150px;
     height: 90px;
     perspective: 1000px;
@@ -95,7 +95,7 @@ body {
     margin: auto;
     position: fixed;
     bottom: 440px;
-    right: 940px;
+    left: 940px;
     width: 150px;
     height: 90px;
     perspective: 1000px;
