--- a/project2/style.css
+++ b/project2/style.css
@@ -1,80 +1,41 @@
 body {
     background-color: #060CE9;
+    position:fixed;
+    top:0px;
+    bottom:0px;
+    left:0px;
+    right:0px;
 }
 
-.grid-container {
+.container {
     display: grid;
-    grid-gap: 50px 100px;
+    padding: 50px;
+    grid: repeat(6, 15%) / auto-flow;
+    height: 100vh;
+  }
+  
+.row {
+    display: grid;
+    grid: repeat(1, 100%) / auto-flow;
+    /* border: 5px solid black; */
 }
-
-.grid-item1 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 1; grid-column-end: 2; grid-row-start: 1; grid-row-end: 2;}
-
-.grid-item2 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 2; grid-column-end: 3; grid-row-start: 1; grid-row-end: 2;}
-
-.grid-item3 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 3; grid-column-end: 4; grid-row-start: 1; grid-row-end: 2;}
-
-.grid-item4 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 4; grid-column-end: 5; grid-row-start: 1; grid-row-end: 2;}
-
-.grid-item5 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 5; grid-column-end: 6; grid-row-start: 1; grid-row-end: 2;}
-
-.grid-item6 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 6; grid-column-end: 7; grid-row-start: 1; grid-row-end: 2;}
-
-.grid-item7 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 1; grid-column-end: 2; grid-row-start: 2; grid-row-end: 3;}
-
-.grid-item8 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 2; grid-column-end: 3; grid-row-start: 2; grid-row-end: 3;}
-
-.grid-item9 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 3; grid-column-end: 4; grid-row-start: 2; grid-row-end: 3;}
-
-.grid-item10 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 4; grid-column-end: 5; grid-row-start: 2; grid-row-end: 3;}
-
-.grid-item11 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 5; grid-column-end: 6; grid-row-start: 2; grid-row-end: 3;}
-
-.grid-item12 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 6; grid-column-end: 7; grid-row-start: 2; grid-row-end: 3;}
-
-.grid-item13 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 1; grid-column-end: 2; grid-row-start: 3; grid-row-end: 4;}
-
-.grid-item14 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 2; grid-column-end: 3; grid-row-start: 3; grid-row-end: 4;}
-
-.grid-item15 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 3; grid-column-end: 4; grid-row-start: 3; grid-row-end: 4;}
-
-.grid-item16 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 4; grid-column-end: 5; grid-row-start: 3; grid-row-end: 4;}
-
-.grid-item17 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 5; grid-column-end: 6; grid-row-start: 3; grid-row-end: 4;}
-
-.grid-item18 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 6; grid-column-end: 7; grid-row-start: 3; grid-row-end: 4;}
-
-.grid-item19 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 1; grid-column-end: 2; grid-row-start: 4; grid-row-end: 5;}
-
-.grid-item20 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 2; grid-column-end: 3; grid-row-start: 4; grid-row-end: 5;}
-
-.grid-item21 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 3; grid-column-end: 4; grid-row-start: 4; grid-row-end: 5;}
-
-.grid-item22 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 4; grid-column-end: 5; grid-row-start: 4; grid-row-end: 5;}
-
-.grid-item23 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 5; grid-column-end: 6; grid-row-start: 4; grid-row-end: 5;}
-
-.grid-item24 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 6; grid-column-end: 7; grid-row-start: 4; grid-row-end: 5;}
-
-.grid-item25 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 1; grid-column-end: 2; grid-row-start: 5; grid-row-end: 6;}
-
-.grid-item26 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 2; grid-column-end: 3; grid-row-start: 5; grid-row-end: 6;}
-
-.grid-item27 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 3; grid-column-end: 4; grid-row-start: 5; grid-row-end: 6;}
-
-.grid-item28 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 4; grid-column-end: 5; grid-row-start: 5; grid-row-end: 6;}
-
-.grid-item29 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 5; grid-column-end: 6; grid-row-start: 5; grid-row-end: 6;}
-
-.grid-item30 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 6; grid-column-end: 7; grid-row-start: 5; grid-row-end: 6;}
-
-.grid-item31 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 1; grid-column-end: 2; grid-row-start: 6; grid-row-end: 7;}
-
-.grid-item32 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 2; grid-column-end: 3; grid-row-start: 6; grid-row-end: 7;}
-
-.grid-item33 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 3; grid-column-end: 4; grid-row-start: 6; grid-row-end: 7;}
-
-.grid-item34 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 4; grid-column-end: 5; grid-row-start: 6; grid-row-end: 7;}
-
-.grid-item35 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 5; grid-column-end: 6; grid-row-start: 6; grid-row-end: 7;}
-
-.grid-item36 { grid-column-start: 1; grid-column-end: 3; color: red; grid-column-start: 6; grid-column-end: 7; grid-row-start: 6; grid-row-end: 7;} 
+  
+.row > .square {
+    background: #060CE9;
+    border: 5px solid black;
+    text-align: center;
+    color: yellow;
+    font-size: 3em;
+    /* size: 20%; */
+}
+  
+/* @media (orientation: portrait) {
+    
+    .container {
+      transform: rotate(90deg) translate(35%);
+    }
+    
+    .row > .square {
+      transform: rotate(-90deg);
+    }
+} */
