--- a/project2/style.css
+++ b/project2/style.css
@@ -31,9 +31,14 @@ body {
     border: 5px solid black;
     text-align: center;
     color: yellow;
-    font-size: 3em;
+    /*font-size: 3em;*/
 }
 
 img:hover {
     opacity: 0.9;
+}
+
+.category {
+    font-size: .5em;
+    padding: 5%;
 }
