--- a/project2/style.css
+++ b/project2/style.css
@@ -24,6 +24,7 @@ body {
 .row {
     display: grid;
     grid: repeat(1, 100%) / auto-flow;
+    text-align: justify;
 }
   
 .row > .square {
@@ -31,14 +32,19 @@ body {
     border: 5px solid black;
     text-align: center;
     color: yellow;
-    /*font-size: 3em;*/
+    font-size: 3em;
 }
 
 img:hover {
-    opacity: 0.9;
+    opacity: 0.85;
 }
 
 .category {
     font-size: .5em;
     padding: 5%;
+}
+
+a {
+    text-decoration: none;
+    color: yellow;
 }
