--- a/assignment5/game.css
+++ b/assignment5/game.css
@@ -1,40 +1,14 @@
 div#board{
-	background:#CCC;
-	border:#999 1px solid;
-	width:862px;
-	height:570px;
-	padding:24px;
-	margin:0px auto;
-	}
-	div#board > div{
-	background: url(tile_bg.jpg) no-repeat;
-	border:#000 .1px solid;
-	width:100px;
-	height:100px;
-	float:left;
-	margin:10px;
-	padding:10px;
-	/* font-size:64px; */
-	cursor:pointer;
-	text-align:center;
-	}
-	div {
+	width: 862px;
+	height: 570px;
+}
+
+div#board > div{
+	border: .1px solid;
+	float: left;
+}
+
+div {
 	width: 100px;
 	height: 100px;
-	background: red;
-	position: relative;
-	-webkit-animation: mymove 120s;
-	-webkit-animation-play-state: paused;
-	animation: mymove 120s;
-	animation-play-state: paused;
-	}
-		
-	@-webkit-keyframes mymove {
-	from {left: 0px;}
-	to {left: 100px;}
-	}
-	
-	@keyframes mymove {
-	from {left: 0px;}
-	to {left: 100px;}
-	}
+}
