--- a/project3/fifteen.css
+++ b/project3/fifteen.css
@@ -1,47 +1,54 @@
-#controls,
-#overall,
-#puzzlearea {
+#game {
+	margin-left: auto;
+	margin-right: auto;
 	width: 400px;
 }
 
-#controls {
-	padding-top: 10px;
-	text-align: center;
-}
-
-#overall {
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#puzzlearea {
+#board {
 	font-size: 32px;
 	height: 400px;
 	padding: 0px;
 	position: relative;
+	width: 400px;
 }
 
-.puzzlepiece {
-	background-image: url(background.jpg);
-	border: 2px solid black;
-	height: 96px;
-	line-height: 96px;
-	position: absolute;
+#shuffleBtn {
 	text-align: center;
-	vertical-align: middle;
-	width: 96px;
+	width: 400px;
 }
 
-.movablepiece:hover {
-	border-color: red;
-	color: #006600;
-	text-decoration: underline;
-}
-
-#w3c {
+#validator {
 	text-align: right;
 }
 
-#w3c img {
-	border: none;
+.tile {
+	background-image: url(background.jpg);
+	border: 2px solid black;
+	height: 100px;
+	line-height: 100px;
+	position: absolute;
+	text-align: center;
+	vertical-align: middle;
+	width: 100px;
+}
+
+.moveableTile {
+	background-image: url(background.jpg);
+	border: 2px solid red;
+	color: #006600;
+	text-decoration: underline;
+	height: 100px;
+	line-height: 100px;
+	position: absolute;
+	text-align: center;
+	vertical-align: middle;
+	width: 100px;
+}
+
+.winText {
+	color: red;
+	font-size: 50px;
+	position: relative;
+	width: 50%;
+	text-align: right;
 }
